[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "wareki-python"
version = "0.1.0"
description = "Japanese era (Wareki) conversion library powered by Rust."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Antigravity"}]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["wareki", "calendar", "rust", "japanese", "date"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/namineco144/wareki-rs"
Repository = "https://github.com/namineco144/wareki-rs"

[tool.maturin]
features = ["pyo3/extension-module"]
